k8s/homarr/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    name: homarr
