k8s/homarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - image: ghcr.io/ajnart/homarr:0.16.1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          name: homarr
          ports:
            - containerPort: 7575
          volumeMounts:
            - mountPath: /app/data/configs
              name: homarr-config
            - mountPath: /app/public/icons
              name: homarr-icons
            - mountPath: /data
              name: homarr-data
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /opt/homarr/configs
          name: homarr-config
        - hostPath:
            path: /opt/homarr/icons
          name: homarr-icons
        - hostPath:
            path: /opt/homarr/data
          name: homarr-data
