k8s/homarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
    kubernetes.io/name: "homarr"
spec:
  type: NodePort
  ports:
    - name: homarr
      port: 7575
      targetPort: 7575
      nodePort: 30018
  selector:
    app: homarr
